=head1 OmniPITR

=encoding utf8

=head2 2012-12-04

=over

=item * Make temp directories based on PID, to allow easy running (for example)
2 slaves on the same machine.

=back

=head2 2012-12-04

=over

=item * Add option to make omnipitr-restore able to remove files from walarchive
before serving next xlog to PostgreSQL. This is important in cases where slave
falls back a lot, and it's catching up - but it doesn't start to remove old,
obsolete wal segments before it will fully catch up. Now, with new option
(--remove-before) it will delete old wal segments during catchup phase too.

=back

=head2 2012-08-08

=over

=item * Make sanity-check.sh return sensible exit code - pull from François
Beausoleil ( https://github.com/francois )

=back

=head2 2012-08-08

=over

=item * Fix log line parsing in omnipitr-monitor - the bug in there prevented
omnipitr-monitor from working when running on server with timezone "before" UTC
(for example UTC-0400).

=back

=head2 2012-07-02

=over

=item * Release of version 1.0.0

=item * Finally omnipitr-monitor is working

=back

=head2 2012-05-07

=over

=item * Release of version 0.7.0

=item * Cherry-pick wal segments for omnipitr-backup-slave, instead of archiving
whole WALARCHIVE

=back

=head2 2012-04-26

=over

=item * Release of version 0.6.0

=item * Support parallelism of delivery to remote destinations, and unpacking of
wal archives for omnipitr-backup-slave

=back

=head2 2012-03-30

=over

=item * Release of version 0.5.0

=item * Direct destination support - details: http://www.depesz.com/2012/03/30/omnipitr-0-5-0/

=back

=head2 2012-01-19

=over

=item * Release of version 0.4.0

=item * Fix handling of symlinks to walarchive in omnipitr-backup-slave

=back

=head2 2012-01-17

=over

=item * New program omnipitr-cleanup to be used as archive_cleanup_command in
recovery.conf - for streaming replication setups

=back

=head2 2012-01-11

=over

=item * Release version 0.3.1
