@@ -2,7 +2,7 @@ package OmniPITR::Program::Archive;
 use strict;
 use warnings;
 
-our $VERSION = '1.0.0';
+our $VERSION = '1.0.1';
 use base qw( OmniPITR::Program );
 
 use Carp;
